--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>feathers-chat</title>
+    <title>MoonTrade Management</title>
     <meta name="description" content="A Feathers chat application" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link type="text/css" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" />
@@ -12,12 +12,12 @@
 
 <body>
     <div id="app" data-theme="dracula"></div>
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@feathersjs/client@^5.0.0-pre.34/dist/feathers.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="helper.js"></script>
     <script src="/templates/login.js"></script>
-    <script src="/templates/chat.js"></script>
     <script src="/templates/trade.js"></script>
     <script src="client.js"></script>
 </body>
